--- a/evarobot_gazebo/package.xml
+++ b/evarobot_gazebo/package.xml
@@ -39,6 +39,7 @@
   <build_depend>camera_info_manager</build_depend>
   <build_depend>im_msgs</build_depend>
   <build_depend>hector_gazebo_plugins</build_depend>
+  <build_depend>interactive_marker_twist_server</build_depend>
   
   <run_depend>gazebo</run_depend>
   <run_depend>gazebo_msgs</run_depend>
@@ -66,5 +67,5 @@
   <run_depend>camera_info_manager</run_depend>
   <run_depend>im_msgs</run_depend>
   <run_depend>hector_gazebo_plugins</run_depend>
-
+  <run_depend>interactive_marker_twist_server</run_depend>
 </package>
